# libxmtp

./: Cargo.toml  README.md
.github/workflows/: bindings_wasm_test.yaml  build.yml  ci-image.yml  lint.yaml  release.yml  test.yml  xmtp_api_grpc_gateway_test.yaml
evm_contracts/: Cargo.toml  README.md  index.html  index.js  package.json  start.sh
evm_contracts/src/: lib.rs  utils.rs
